Fix layout issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,9 +52,7 @@ a {
 
 .container {
   margin: auto;
-  width: 100%;
-  max-width: 800px;
-  min-width: 450px;
+  width: 700px;
   padding: 0 1rem;
 }
 
@@ -128,7 +126,17 @@ a {
   margin-right: 0;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 700px) {
+  .container {
+    width: 600px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    width: 500px;
+  }
+
   .button-group {
     flex-direction: column;
   }
