--- a/styles/sudoku/cell.module.css
+++ b/styles/sudoku/cell.module.css
@@ -6,7 +6,6 @@
 .input {
   width: 100%;
   height: 100%;
-  min-height: 50px;
   text-align: center;
   border: 0;
   background: none;
