--- a/styles/sudoku/table.module.css
+++ b/styles/sudoku/table.module.css
@@ -8,6 +8,19 @@
 
 .table {
   border: solid 2px var(--grey-darkest);
+  height: calc(700px - 4rem);
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+}
+
+@media screen and (max-width: 700px) {
+  .table {
+    height: calc(600px - 4rem);
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .table {
+    height: calc(500px - 4rem);
+  }
 }
